--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,54 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	:root,
+	html {
+		--color-primary: 243, 238, 229; /* #f3eee5 */
+		--color-secondary: 233, 196, 106; /* #e9c46a; */
+		--color-tertiary: 36, 28, 21; /* #241c15 */
+		--color-text: 11, 11, 11; /* #0b0b0b; */
+		--color-card: 92, 99, 120; /* #303030 */
+		--color-border: 210, 210, 210; /* #D2D2D2; */
+	}
+
+	html {
+		@apply overflow-y-scroll scroll-smooth;
+	}
+
+	body {
+		@apply bg-skin-primary !font-helvetica text-skin-text;
+	}
+
+	/* ===== Custom Scrollbar ===== */
+	/* width */
+	::-webkit-scrollbar {
+		@apply w-4;
+	}
+
+	/* Track */
+	::-webkit-scrollbar-track {
+		@apply bg-skin-primary;
+	}
+
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		@apply bg-skin-secondary;
+	}
+
+	/* ===== Selection ===== */
+	::selection {
+		@apply bg-skin-text text-skin-primary;
+	}
+
+	.center {
+		@apply mx-auto w-full max-w-6xl xl:max-w-[102rem];
+	}
+}
+
+@layer components {
+	.section-title {
+		@apply text-4xl font-bold xl:text-5xl;
+	}
+}
