--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -49,6 +49,6 @@
 
 @layer components {
 	.section-title {
-		@apply text-4xl font-bold xl:text-5xl;
+		@apply text-4xl font-bold xl:text-5xl font-means-web;
 	}
 }
