--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,6 +47,13 @@
 	::selection {
 		@apply bg-skin-text text-skin-primary;
 	}
+
+	/* Remove arrows on input type number */
+	input[type="number"]::-webkit-inner-spin-button,
+	input[type="number"]::-webkit-outer-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
 }
 
 @layer components {
