Change name of `--color-alert` to `--color-danger`

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,7 +15,7 @@
 		--color-text-muted: 84, 90, 101; /* #545a65; */
 		--color-link: 26, 86, 219; /* #1A56DB */
 		--color-success: 14, 159, 110; /* #0E9F6E */
-		--color-alert: 224, 36, 36; /* #E02424 */
+		--color-danger: 224, 36, 36; /* #E02424 */
 		--color-card: 92, 99, 120; /* #303030 */
 		--color-border: 210, 210, 210; /* #D2D2D2; */
 	}
