--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,8 +15,11 @@
 		--color-text-muted: 84, 90, 101; /* #545a65; */
 		--color-link: 26, 86, 219; /* #1A56DB */
 		--color-success: 14, 159, 110; /* #0E9F6E */
+		--color-success-light: 125, 199, 169; /* #7DC7A9 */
 		--color-warning: 255, 193, 7; /* #ffc107 */
+		--color-warning-light: 249, 216, 117; /* #F9D875 */
 		--color-danger: 224, 36, 36; /* #E02424 */
+		--color-danger-light: 233, 137, 132; /* #E98984 */
 		--color-card: 92, 99, 120; /* #303030 */
 		--color-border: 210, 210, 210; /* #D2D2D2; */
 	}
