Make `--color-text-muted` a little darker

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,7 @@
 		--color-secondary-offset: 243, 220, 171; /* #f3dcab; */
 		--color-tertiary: 36, 28, 21; /* #241c15 */
 		--color-text: 11, 11, 11; /* #0b0b0b; */
-		--color-text-muted: 84, 90, 101; /* #545a65; */
+		--color-text-muted: 107, 114, 128; /* #6B7280; */
 		--color-link: 26, 86, 219; /* #1A56DB */
 		--color-success: 14, 159, 110; /* #0E9F6E */
 		--color-success-light: 125, 199, 169; /* #7DC7A9 */
