--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,6 +61,10 @@
 }
 
 @layer components {
+	.page-container {
+		@apply min-h-screen pt-[4.3rem];
+	}
+
 	.container {
 		@apply mx-auto max-w-[102rem];
 	}
