--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -70,6 +70,6 @@
 	}
 
 	.section-title {
-		@apply font-means-web text-4xl font-bold xl:text-5xl;
+		@apply font-means-web text-4xl font-bold md:text-5xl;
 	}
 }
